# hermes

./: .bazelrc  .gitignore  MODULE.bazel  WORKSPACE
hermes/: BUILD
hermes/common/: deps.bzl
hermes/config/: BUILD  config.h
hermes/container/: BUILD  any.h  base.h  optional.h  smart_pointer.h  spsc_queue.h  spsc_queue_mmap.h  static_list.h  static_unordered_map.h  stl_hash_map.h  stl_shared_ptr.h  stl_string.h  stl_vector.h  string.h
hermes/fastio/: BUILD  fast_io.h  fastio.h
hermes/io/: fastio.h
hermes/network/: BUILD  dealer.h  pub.h  rep.h  req.h  router.h  sub.h
hermes/network/base/: BUILD  base.h
hermes/network/zmq/: BUILD  zmq.h  zmq.hpp  zmq_addon.hpp  zmq_utils.h
hermes/random/: BUILD  random.h
test/: BUILD  integral_fastio_test.cpp
test/data/: BUILD  integral_fastio_input.txt  integral_fastio_perf_gen.cpp  integral_fastio_test_gen.cpp
test/perf/: BUILD  integral_fastio_perf.cpp  perf_stat.sh  run.sh
test/perf/common/: deps.bzl
test/perf/container/: BUILD
test/perf/container/spsc_queue/: BUILD  write_bm.cpp
test/perf/io/: BUILD  fastio_bm.cpp  integral_fastio_perf.cpp
test/perf/temp/: BUILD  job.txt  job_manager.h  job_manager_bm.cpp
test/unit_test/: BUILD  integral_fastio_test.cpp
test/unit_test/common/: deps.bzl
test/unit_test/container/: BUILD  any_test.cpp  optional_test.cpp  smart_pointer_test.cpp  spsc_queue_test.cpp  static_list_test.cpp  stl_hash_map_test.cpp  stl_shared_ptr_test.cpp  stl_vector_test.cpp  string_test.cpp
test/unit_test/network/: BUILD  pub_sub_test.cpp  req_rep_test.cpp  router_dealer_test.cpp
(+13 files in other folders)
