###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "my-module", version = "1.0")

bazel_dep(name = "catch2", version = "3.7.1")

bazel_dep(name = "google_benchmark", version = "1.8.5")

